# nlp_learning

./: .gitignore  README.md  pyproject.toml
docs/: multi_lang_metrics.md
notebooks/: fine_tuning_lm_multilang_detect.ipynb  fundamental.ipynb  multilang_detect.ipynb
notebooks/wandb/: latest-run
notebooks/wandb/run-20250726_123559-o1oth1ck/: run-o1oth1ck.wandb
notebooks/wandb/run-20250726_123559-o1oth1ck/files/: requirements.txt  wandb-metadata.json
