[project]
name = "nlp-learning"
version = "0.1.0"
description = "Learning Natural Language Processing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.9.0",
    "dataset>=1.6.2",
    "datasets>=4.0.0",
    "evaluate>=0.4.5",
    "huggingface-hub>=0.33.4",
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
    "langdetect>=1.0.9",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "polars>=1.31.0",
    "protobuf>=6.31.1",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.4",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "spacy>=3.8.7",
    "transformers>=4.53.2",
    "wandb>=0.21.0",
]
